--- a/style.css
+++ b/style.css
@@ -5,5 +5,38 @@ body{
 }
 
 .recipe__container{
-    background-color: crimson;
+    background-color: rgb(238, 232, 232);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card{
+
+    width:  55rem;
+    margin: 1rem;
+    
+}
+
+
+.title {
+    text-align: center;
+    font-size: 2.5rem;
+    
+}
+.img__container {
+    width: 60rem;
+    overflow: hidden;
+}
+img {
+    width: 60rem;
+    object-fit: cover;
+}
+
+.info {
+    font-size: 1.5rem;
+}
+
+.info:last-child{
+    text-align: center;
 }
